--- a/src/LostTimeWeb.WebApp/LostTimeWeb.WebApp.csproj
+++ b/src/LostTimeWeb.WebApp/LostTimeWeb.WebApp.csproj
@@ -32,5 +32,6 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1"/>
     <PackageReference Include="System.Runtime.Extensions" Version="4.3.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="1.1.2"/>
+    <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="1.0.2"/>
   </ItemGroup>
 </Project>
