updated caroussel ; softed apperance; edited About ;bug : fileloader ; tested losttimeDB install but failed

--- a/NuGet.config
+++ b/NuGet.config
@@ -3,5 +3,9 @@
   <packageSources>
     <clear />
     <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
+    <add key="LostTimePackages" value="https://www.myget.org/F/losttime-packages/api/v3/index.json" />
   </packageSources>
+  <disabledPackageSources>
+    <add key="Microsoft and .NET" value="true" />
+  </disabledPackageSources>
 </configuration>
