--- a/src/LostTimeWeb.DB/LostTimeWeb.DB.csproj
+++ b/src/LostTimeWeb.DB/LostTimeWeb.DB.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="dbup" Version="3.3.5" />
+    <PackageReference Include="LostTimeDbUp" Version="0.4.10" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.1" />
