--- a/src/LostTimeWeb.WebApp/LostTimeWeb.WebApp.csproj
+++ b/src/LostTimeWeb.WebApp/LostTimeWeb.WebApp.csproj
@@ -1,9 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
     <OutputType>Exe</OutputType>
     <RuntimeFrameworkVersion>1.1.1</RuntimeFrameworkVersion>
+    <UserSecretsId>9a43f5f6-8953-41f8-8d2b-14966ea0b441</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <None Update="wwwroot\**\*">
@@ -11,26 +12,27 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LostTimeWeb.DAL\LostTimeWeb.DAL.csproj"/>
+    <ProjectReference Include="..\LostTimeWeb.DAL\LostTimeWeb.DAL.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="1.0.0-beta3-final"/>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.1"/>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="1.1.1"/>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="1.1.1"/>
-    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="1.1.1"/>
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="1.1.1"/>
-    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="1.1.1"/>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="1.1.1"/>
-    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="1.1.1"/>
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.1"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.1"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="1.1.1"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="1.1.1"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.1"/>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1"/>
-    <PackageReference Include="System.Runtime.Extensions" Version="4.3.0"/>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="1.1.2"/>
+    <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="1.0.0-beta3-final" />
+    <PackageReference Include="LostTimeDbUp" Version="0.4.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
+    <PackageReference Include="System.Runtime.Extensions" Version="4.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="1.1.2" />
   </ItemGroup>
 </Project>
