--- a/src/LostTimeWeb.WebApp/LostTimeWeb.WebApp.csproj
+++ b/src/LostTimeWeb.WebApp/LostTimeWeb.WebApp.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="1.0.0-beta3-final" />
-    <PackageReference Include="LostTimeDbUp" Version="0.4.10" />
+    <PackageReference Include="LostTimeDB" Version="0.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="1.1.1" />
