--- a/src/LostTimeWeb.WebApp/App/losttimeweb/package.json
+++ b/src/LostTimeWeb.WebApp/App/losttimeweb/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "bootstrap": "^3.3.7",
+    "copy-webpack-plugin": "^4.0.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "jquery": "^3.1.1",
     "vue": "^2.2.4",
