--- a/src/LostTimeWeb.WebApp/App/losttimeweb/package.json
+++ b/src/LostTimeWeb.WebApp/App/losttimeweb/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.2.4",
     "vue-easy-slider": "^3.1.0",
     "vue-router": "^2.3.0",
+    "vue-simplemde": "^0.3.8",
     "vuex": "^2.2.1"
   },
   "devDependencies": {
