--- a/src/LostTimeWeb.WebApp/App/losttimeweb/package.json
+++ b/src/LostTimeWeb.WebApp/App/losttimeweb/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.18.1",
     "vue": "^2.2.4",
     "vue-easy-slider": "^3.1.0",
+    "vue-markdown": "^2.1.3",
     "vue-router": "^2.3.0",
     "vue-simplemde": "^0.3.8",
     "vuex": "^2.2.1"
