--- a/src/LostTimeWeb.WebApp/LostTimeWeb.WebApp.csproj
+++ b/src/LostTimeWeb.WebApp/LostTimeWeb.WebApp.csproj
@@ -39,5 +39,6 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.0" />
     <PackageReference Include="System.Runtime.Extensions" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="1.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="1.1.2" />
   </ItemGroup>
 </Project>
